--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,15 @@ exclude = ["docker/*", "docs/*", "documentation/*", "svd/*"]
 [features]
 default = [
    "defmt-default",
+   "stm32f446_manual"
 ]
 
 # The features below reflect the hierarchy of stm32 families.
 # Choosing a f4 family implies f4, which implies stm32, which
 # implies cortex M...
 stm32f429 = ["blue_hal/stm32f429", "stm32f4_any"]
+stm32f446 = ["blue_hal/stm32f446", "stm32f4_any"]
+stm32f446_manual = ["blue_hal/stm32f446", "stm32f4_any"]
 stm32f469 = ["blue_hal/stm32f469", "stm32f4_any"]
 stm32f407 = ["blue_hal/stm32f407", "stm32f4_any"]
 stm32f412 = ["blue_hal/stm32f412", "stm32f4_any"]
@@ -78,7 +81,8 @@ features = ["ecdsa", "sha256", "pem"]
 optional = true
 
 [dependencies.blue_hal]
-version = "1.0.0"
+#version = "1.0.0"
+path = "blue_hal"
 
 [dependencies.ufmt]
 version = "0.1.*"
